WIP: sparql parsing

--- a/notebooks/pastec-sparql-wip.ipynb
+++ b/notebooks/pastec-sparql-wip.ipynb
@@ -25,8 +25,9 @@
     "{ \n",
     "    ?s pastec:firstPredicate pastec:firstObject .\n",
     "      ?s  pastec:secondPredicate pastec:secondObject ;\n",
-    "      pastec:thirdPredicate pastec:thirdObject ;\n",
-    "      pastec:fourthPredicate pastec:fourthObject , pastec:fifthObject}\n",
+    "          pastec:thirdPredicate pastec:thirdObject ;\n",
+    "          pastec:fourthPredicate pastec:fourthObject , pastec:fifthObject .\n",
+    "      <http://example.org/image.jpg> pastec:hasSimilarImage ?candidate }\n",
     "\"\"\""
    ]
   },
@@ -39,10 +40,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "appending\n",
-      "appending\n",
-      "appending\n",
-      "appending\n",
       "{'triples': [{'o': {'type': <class 'rdflib.term.URIRef'>,\n",
       "                    'value': 'http://service.swissartresearch.net/pastec/firstObject'},\n",
       "              'p': {'type': <class 'rdflib.term.URIRef'>,\n",
@@ -66,7 +63,14 @@
       "             {'o': {'type': <class 'rdflib.term.URIRef'>,\n",
       "                    'value': 'http://service.swissartresearch.net/pastec/fifthObject'},\n",
       "              'p': {'type': <class 'rdflib.term.URIRef'>,\n",
-      "                    'value': 'http://service.swissartresearch.net/pastec/fourthPredicate'}}],\n",
+      "                    'value': 'http://service.swissartresearch.net/pastec/fourthPredicate'},\n",
+      "              's': {'type': <class 'rdflib.term.Variable'>, 'value': 's'}},\n",
+      "             {'o': {'type': <class 'rdflib.term.Variable'>,\n",
+      "                    'value': 'candidate'},\n",
+      "              'p': {'type': <class 'rdflib.term.URIRef'>,\n",
+      "                    'value': 'http://service.swissartresearch.net/pastec/hasSimilarImage'},\n",
+      "              's': {'type': <class 'rdflib.term.URIRef'>,\n",
+      "                    'value': 'http://example.org/image.jpg'}}],\n",
       " 'variables': ['candidate']}\n"
      ]
     }
@@ -100,6 +104,8 @@
     "            prefix = prefixes[part['prefix']]\n",
     "            localname = part['localname']\n",
     "            return prefix + localname\n",
+    "        else:\n",
+    "            return str(part)\n",
     "    if t is Literal:\n",
     "        return str(triple['string'])\n",
     "    return False\n",
@@ -118,7 +124,7 @@
     "                for s, tripleSet in enumerate(item[1][0]['triples']):\n",
     "                    for i, statement in enumerate(tripleSet):\n",
     "                        if iteration != prevIteration or s != prevSet:\n",
-    "                            triples.append(triple.copy())\n",
+    "                            triples.append(triple)\n",
     "                            triple = {}\n",
     "                            prevSet = s\n",
     "                            prevIteration = iteration\n",
@@ -135,7 +141,14 @@
     "                            \"value\": getValueOfTriple(statement, prefixes)\n",
     "                        }\n",
     "                triples.append(triple)\n",
-    "    return triples\n",
+    "    # For statements missing a subject, take the subject from the previous statement.\n",
+    "    # Afterwards remove statements missing a predicate and object. These artefacts stem \n",
+    "    # from tense notation.\n",
+    "    for i, triple in enumerate(triples):\n",
+    "        if not 's' in triple:\n",
+    "            if i > 0 and 's' in triples[i-1]:\n",
+    "                triple['s'] = triples[i-1]['s']\n",
+    "    return [d for d in triples if 's' in d and 'p' in d and 'o' in d]\n",
     "\n",
     "def getProjectionVariables(parsedQuery):\n",
     "    variables = []\n",
@@ -152,23 +165,30 @@
     "        \"triples\": parseTriples(q)\n",
     "    }\n",
     "\n",
+    "result = parsePastecQuery(query)\n",
     "\n",
-    "pprint(parsePastecQuery(query))"
+    "pprint(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Projecting similar images for http://example.org/image.jpg on candidate\n"
+     ]
+    }
+   ],
+   "source": [
+    "for triple in result['triples']:\n",
+    "    if triple['p']['value'] == 'http://service.swissartresearch.net/pastec/hasSimilarImage':\n",
+    "        if triple['o']['value'] in result['variables']:\n",
+    "            print(\"Projecting similar images for\", triple['s']['value'], \"on\",  triple['o']['value'])"
+   ]
   }
  ],
  "metadata": {
