--- a/notebooks/pastec-sparql-wip.ipynb
+++ b/notebooks/pastec-sparql-wip.ipynb
@@ -83,23 +83,23 @@
     "        prefixes[d['prefix']] = str(d['iri'])\n",
     "    return prefixes\n",
     "\n",
-    "def getTypeOfTriple(triple):\n",
-    "    if type(triple) is Variable:\n",
+    "def getTypeOfTerm(term):\n",
+    "    if type(term) is Variable:\n",
     "        return Variable\n",
-    "    if 'string' in triple:\n",
+    "    if 'string' in term:\n",
     "        return Literal\n",
     "    else:\n",
     "        return URIRef\n",
     "    \n",
-    "def getValueOfTriple(triple, prefixes):\n",
-    "    t = getTypeOfTriple(triple)\n",
+    "def getValueOfTerm(term, prefixes):\n",
+    "    t = getTypeOfTerm(term)\n",
     "    if t is Variable:\n",
-    "        return str(triple)\n",
+    "        return str(term)\n",
     "    if t is URIRef:\n",
     "        try:\n",
-    "            part = triple['part'][0]['part'][0]['part']\n",
+    "            part = term['part'][0]['part'][0]['part']\n",
     "        except:\n",
-    "            part = triple\n",
+    "            part = term\n",
     "        if 'prefix' in part:\n",
     "            prefix = prefixes[part['prefix']]\n",
     "            localname = part['localname']\n",
@@ -107,7 +107,7 @@
     "        else:\n",
     "            return str(part)\n",
     "    if t is Literal:\n",
-    "        return str(triple['string'])\n",
+    "        return str(term['string'])\n",
     "    return False\n",
     "\n",
     "def parseTriples(parsedQuery):\n",
@@ -121,8 +121,8 @@
     "                prevIteration = 0\n",
     "                iteration = prevIteration\n",
     "                triple = {}\n",
-    "                for s, tripleSet in enumerate(item[1][0]['triples']):\n",
-    "                    for i, statement in enumerate(tripleSet):\n",
+    "                for s, queryPath in enumerate(item[1][0]['triples']):\n",
+    "                    for i, statement in enumerate(queryPath):\n",
     "                        if iteration != prevIteration or s != prevSet:\n",
     "                            triples.append(triple)\n",
     "                            triple = {}\n",
@@ -137,8 +137,8 @@
     "                            key = \"o\"\n",
     "                        \n",
     "                        triple[key] =  {\n",
-    "                            \"type\": getTypeOfTriple(statement),\n",
-    "                            \"value\": getValueOfTriple(statement, prefixes)\n",
+    "                            \"type\": getTypeOfTerm(statement),\n",
+    "                            \"value\": getValueOfTerm(statement, prefixes)\n",
     "                        }\n",
     "                triples.append(triple)\n",
     "    # For statements missing a subject, take the subject from the previous statement.\n",
